--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
         }
         p {
             font-size: 8px;
+            text-align: center;
         }
         header {
             background-color: #333;
