--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 <style>
         body {
             font-family: 'Roboto', sans-serif;
-            font-size: 8px;
+            font-size: 6px;
             margin: 0;
             padding: 0;
             background-image: url("img.jpg");
@@ -9,12 +9,13 @@
             background-position: center;
         }
         p {
-            font-size: 12px;
+            font-size: 10px;
             text-align: center;
         }
         header {
             background-color: #333;
             color: #fff;
+            margin: 0;
             padding: 1em;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
